tempfile/derive_more/tests/compile_fail/display/unknown_attribute.rs
#[derive(derive_more::Display)]
#[display("Stuff({})", bar)]
#[display(unknown = "unknown")]
pub struct Foo {
    bar: String,
}

fn main() {}
